--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
     <title>vue-accessibility-toolbar</title>
   </head>
-  <body>
+  <body style="background: white;">
     <noscript>
       <strong>We're sorry but vue-accessibility-toolbar doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
